--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  
+  <header>
+    <div class="tmenu">
+      <ul class="login">
+        <li><a href="">로그인</a></li>
+        <li><a href="">회원가입</a></li>
+        <li><a href="">마이페이지</a></li>
+        <li><a href="">멤버십</a></li>
+        <li><a href="">고객센터</a></li>
+      </ul>
+      <select id="lang">
+        <option>KOREAN</option>
+        <option>ENGLISH</option>
+      </select>
+    </div>
+    <div class="topBar">
+      <h1 class="logo">
+        <a href="./index.html">
+          <img src="./images/스킨푸드로고.png" alt="">
+        </a>
+      </h1>
+      <ul class="gnb">
+        <li><a href="">상품</a></li>
+        <li><a href="">이벤트</a></li>
+        <li><a href="">리뷰</a></li>
+        <li><a href="">커뮤니티</a></li>
+        <li><a href="">어바웃 스킨푸드</a></li>
+      </ul>
+      <div class="gnb_icon">
+        <img src="./images/검색아이콘.png" alt="">
+        <img src="./images/장바구니아이콘.png" alt="">
+      </div>
+    </div>
+  </header>
 </body>
 </html>
