--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <li><a href="">어바웃 스킨푸드</a></li>
       </ul>
       <div class="gnb_icon">
-        <img src="./images/검색아이콘.png" alt="">
-        <img src="./images/장바구니아이콘.png" alt="">
+        <a href="" class="serch"></a>
+        <a href="" class="basket"></a>
       </div>
     </div>
   </header>
