--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <option>ENGLISH</option>
       </select>
     </div>
-    <div class="topBar">
+    <div class="menu">
       <h1 class="logo">
         <a href="./index.html">
           <img src="./images/스킨푸드로고.png" alt="">
@@ -37,10 +37,58 @@
         <li><a href="">어바웃 스킨푸드</a></li>
       </ul>
       <div class="gnb_icon">
-        <a href="" class="serch"></a>
+        <a href="" class="search"></a>
         <a href="" class="basket"></a>
       </div>
     </div>
   </header>
+  <div class="slidewrap">
+    <ul class="slide">
+      <li>
+        <img src="" alt="">
+      </li>
+    </ul>
+    <div class="abtn prev"></div>
+    <div class="abtn next"></div>
+    <ul class="bullet">
+      <li><a href=""></a></li>
+    </ul>
+  </div>
+  <div class="coupban">
+    <img src="./images/쿠폰.jpg" alt="">
+  </div>
+  <div class="recomwrap">
+    <span>
+      <a href="">한 눈에 보는 추천 제품</a>
+    </span>
+    <div class="recomcont">
+      <ul class="drgSlide">
+        <li>
+          <div class="recomtop">
+            <img src="" alt="">
+          </div>
+          <div class="recombottom">
+            <div class="recomfirst">
+              <img src="" alt="">
+              <div class="txt">
+                <div class="txt1"></div>
+                <div class="txt2"></div>
+                <div class="txt3"></div>
+              </div>
+            </div>
+            <div class="recomsecond"></div>
+          </div>
+        </li>
+      </ul>
+      <div class="abtn prev"></div>
+      <div class="abtn next"></div>
+    </div>
+    <div class="bullet">
+      <li><a href=""></a></li>
+    </div>
+  </div>
+  <div class="popular">
+    <span>요즘 뜨는 <strong>상품</strong></span>
+  </div>
 </body>
 </html>
