--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
                 <div class="txt3"></div>
               </div>
             </div>
-            <div class="recomsecond"></div>
+            <div class="recomsecond">
+              <img src="" alt="">
+              <div class="txt">
+                <div class="txt1"></div>
+                <div class="txt2"></div>
+                <div class="txt3"></div>
+              </div>
+            </div>
           </div>
         </li>
       </ul>
@@ -89,6 +96,82 @@
   </div>
   <div class="popular">
     <span>요즘 뜨는 <strong>상품</strong></span>
+    <ul class="popcont">
+      <li>
+        <img src="" alt="">
+        <div class="txt">
+          <div class="text1"></div>
+          <div class="text2"></div>
+          <div class="text3"></div>
+          <div class="text4"></div>
+          <div class="text5"></div>
+        </div>
+      </li>
+    </ul>
+    <div class="abtn prev"></div>
+    <div class="abtn next"></div>
+    <div class="bullet">
+      <li><a href=""></a></li>
+    </div>
   </div>
+  <div class="cat">
+    <span>
+      <a href="">카테고리 별 인기템</a>
+    </span>
+    <ul class="catitem">
+      <li>
+        <img src="" alt="">
+        <span></span>
+      </li>
+    </ul>
+    <ul class="catcont">
+      <li>
+        <img src="" alt="">
+        <div class="txt1"></div>
+        <div class="txt2"></div>
+        <div class="txt3"></div>
+        <div class="txt4"></div>
+        <div class="txt5"></div>
+      </li>
+    </ul>
+    <div class="abtn prev"></div>
+    <div class="abtn next"></div>
+    <div class="bullet">
+      <li><a href=""></a></li>
+    </div>
+  </div>
+  <div class="review">
+    <span>
+      <a href="">포토 리뷰</a>
+    </span>
+    <div class="slidewrap">
+      <ul class="slide">
+        <li>
+          <img src="" alt="">
+        </li>
+      </ul>
+    </div>
+    <div class="abtn prev"></div>
+    <div class="abtn next"></div>
+    <ul class="bullet">
+      <li><a href=""></a></li>
+    </ul>
+  </div>
+  <div class="brandban">
+    <img src="" alt="">
+  </div>
+  <div class="insta">
+    <div class="instalogo">
+      <img src="" alt="">
+    </div>
+    <div class="profile">
+      <img src="" alt="">
+      <div class="instaid"></div>
+    </div>
+    <div class="photo"></div>
+  </div>
+  <footer>
+    
+  </footer>
 </body>
 </html>
