--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 </head>
 <body>
   <header>
-    <div class="tmenu">
-      <ul class="login">
-        <li><a href="">로그인</a></li>
-        <li><a href="">회원가입</a></li>
-        <li><a href="">마이페이지</a></li>
-        <li><a href="">멤버십</a></li>
-        <li><a href="">고객센터</a></li>
-      </ul>
-      <select id="lang">
-        <option>KOREAN</option>
-        <option>ENGLISH</option>
-      </select>
+    <div class="tmenuwrap">
+      <div class="tmenu">
+        <ul class="login">
+          <li><a href="">로그인</a></li>
+          <li><a href="">회원가입</a></li>
+          <li><a href="">마이페이지</a></li>
+          <li><a href="">멤버십</a></li>
+          <li><a href="">고객센터</a></li>
+        </ul>
+        <select id="lang">
+          <option>KOREAN</option>
+          <option>ENGLISH</option>
+        </select>
+      </div>
     </div>
     <div class="menu">
       <h1 class="logo">
@@ -42,12 +44,33 @@
       </div>
     </div>
   </header>
-  <div class="slidewrap">
-    <ul class="slide">
-      <li>
-        <img src="" alt="">
-      </li>
-    </ul>
+  <div id="content1">
+      <ul class="slide">
+        <li>
+          <img src="./images/content1_1.jpg" alt="">
+        </li>
+        <li>
+          <img src="./images/content1_2.jpg" alt="">
+        </li>
+        <li>
+          <img src="./images/content1_3.jpg" alt="">
+        </li>
+        <li>
+          <img src="./images/content1_4.jpg" alt="">
+        </li>
+        <li>
+          <img src="./images/content1_5.jpg" alt="">
+        </li>
+        <li>
+          <img src="./images/content1_6.jpg" alt="">
+        </li>
+        <li>
+          <img src="./images/content1_7.jpg" alt="">
+        </li>
+        <li>
+          <img src="./images/content1_8.jpg" alt="">
+        </li>
+      </ul>
     <div class="abtn prev"></div>
     <div class="abtn next"></div>
     <ul class="bullet">
@@ -57,7 +80,7 @@
   <div class="coupban">
     <img src="./images/쿠폰.jpg" alt="">
   </div>
-  <div class="recomwrap">
+  <div id="content2">
     <span>
       <a href="">한 눈에 보는 추천 제품</a>
     </span>
@@ -94,7 +117,7 @@
       <li><a href=""></a></li>
     </div>
   </div>
-  <div class="popular">
+  <div id="content3">
     <span>요즘 뜨는 <strong>상품</strong></span>
     <ul class="popcont">
       <li>
@@ -114,7 +137,7 @@
       <li><a href=""></a></li>
     </div>
   </div>
-  <div class="cat">
+  <div id="content4">
     <span>
       <a href="">카테고리 별 인기템</a>
     </span>
@@ -140,7 +163,7 @@
       <li><a href=""></a></li>
     </div>
   </div>
-  <div class="review">
+  <div id="content5">
     <span>
       <a href="">포토 리뷰</a>
     </span>
@@ -160,7 +183,7 @@
   <div class="brandban">
     <img src="" alt="">
   </div>
-  <div class="insta">
+  <div id="content6">
     <div class="instalogo">
       <img src="" alt="">
     </div>
@@ -171,7 +194,7 @@
     <div class="photo"></div>
   </div>
   <footer>
-    
+
   </footer>
 </body>
 </html>
