--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </div>
   <div id="content2">
     <span>
-      <a href="">한 눈에 보는 추천 제품</a>
+      <a href=""><strong>한 눈에 보는 추천 제품</strong></a>
     </span>
     <div class="recomcont">
       <ul class="drgSlide">
