--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
       <ul class="drgSlide">
         <li>
           <div class="recomtop">
-            <img src="" alt="">
+            <img src="./images/content2_1-1.jpg" alt="">
           </div>
           <div class="recombottom">
             <div class="recomfirst">
-              <img src="" alt="">
+              <img src="./images/content2_1-2-1.jpg" alt="">
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
@@ -100,7 +100,30 @@
               </div>
             </div>
             <div class="recomsecond">
-              <img src="" alt="">
+              <img src="./images/content2_1-2-2.jpg" alt="">
+              <div class="txt">
+                <div class="txt1"></div>
+                <div class="txt2"></div>
+                <div class="txt3"></div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="recomtop">
+            <img src="./images/content2_2-1.jpg" alt="">
+          </div>
+          <div class="recombottom">
+            <div class="recomfirst">
+              <img src="./images/content2_2-2-1.jpg" alt="">
+              <div class="txt">
+                <div class="txt1"></div>
+                <div class="txt2"></div>
+                <div class="txt3"></div>
+              </div>
+            </div>
+            <div class="recomsecond">
+              <img src="./images/content2_2-2-2.jpg" alt="">
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
