--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>스킨푸드</title>
 
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/slick.css">
+  <link rel="stylesheet" href="./css/slick-theme.css">
+
+  <script src="./js/jquery-3.6.0.min.js"></script>
+  <script src="./js/jquery-ui.min.js"></script>
+  <script src="./js/slick.js"></script>
+  <script src="./js/main.js"></script>
+
 </head>
 <body>
   <header>
@@ -132,10 +140,56 @@
             </div>
           </div>
         </li>
+        <li>
+          <div class="recomtop">
+            <img src="./images/content2_3-1.jpg" alt="">
+          </div>
+          <div class="recombottom">
+            <div class="recomfirst">
+              <img src="./images/content2_3-2-1.jpg" alt="">
+              <div class="txt">
+                <div class="txt1"></div>
+                <div class="txt2"></div>
+                <div class="txt3"></div>
+              </div>
+            </div>
+            <div class="recomsecond">
+              <img src="./images/content2_3-2-2.jpg" alt="">
+              <div class="txt">
+                <div class="txt1"></div>
+                <div class="txt2"></div>
+                <div class="txt3"></div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="recomtop">
+            <img src="./images/content2_4-1.jpg" alt="">
+          </div>
+          <div class="recombottom">
+            <div class="recomfirst">
+              <img src="./images/content2_4-2-1.jpg" alt="">
+              <div class="txt">
+                <div class="txt1"></div>
+                <div class="txt2"></div>
+                <div class="txt3"></div>
+              </div>
+            </div>
+            <div class="recomsecond">
+              <img src="./images/content2_4-2-2.jpg" alt="">
+              <div class="txt">
+                <div class="txt1"></div>
+                <div class="txt2"></div>
+                <div class="txt3"></div>
+              </div>
+            </div>
+          </div>
+        </li>
       </ul>
-      <div class="abtn prev"></div>
-      <div class="abtn next"></div>
     </div>
+    <div class="abtn prev"></div>
+    <div class="abtn next"></div>
     <div class="bullet">
       <li><a href=""></a></li>
     </div>
