--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <span>
       <a href=""><strong>한 눈에 보는 추천 제품</strong></a>
     </span>
+    <div class="img"></div>
     <div class="recomcont">
       <ul class="drgSlide">
         <li>
