--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
           </div>
           <div class="recombottom">
             <div class="recomfirst">
-              <img src="./images/content2_1-2-1.jpg" alt="">
+              <div class="img">
+                <img src="./images/content2_1-2-1.jpg" alt="">
+              </div>
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
@@ -109,7 +111,9 @@
               </div>
             </div>
             <div class="recomsecond">
-              <img src="./images/content2_1-2-2.jpg" alt="">
+              <div class="img">
+                <img src="./images/content2_1-2-2.jpg" alt="">
+              </div>
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
@@ -124,7 +128,9 @@
           </div>
           <div class="recombottom">
             <div class="recomfirst">
-              <img src="./images/content2_2-2-1.jpg" alt="">
+              <div class="img">
+                <img src="./images/content2_2-2-1.jpg" alt="">
+              </div>
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
@@ -132,7 +138,9 @@
               </div>
             </div>
             <div class="recomsecond">
-              <img src="./images/content2_2-2-2.jpg" alt="">
+              <div class="img">
+                <img src="./images/content2_2-2-2.jpg" alt="">
+              </div>
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
@@ -147,7 +155,9 @@
           </div>
           <div class="recombottom">
             <div class="recomfirst">
-              <img src="./images/content2_3-2-1.jpg" alt="">
+              <div class="img">
+                <img src="./images/content2_3-2-1.jpg" alt="">
+              </div>
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
@@ -155,7 +165,9 @@
               </div>
             </div>
             <div class="recomsecond">
-              <img src="./images/content2_3-2-2.jpg" alt="">
+              <div class="img">
+                <img src="./images/content2_3-2-2.jpg" alt="">
+              </div>
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
@@ -170,7 +182,9 @@
           </div>
           <div class="recombottom">
             <div class="recomfirst">
-              <img src="./images/content2_4-2-1.jpg" alt="">
+              <div class="img">
+                <img src="./images/content2_4-2-1.jpg" alt="">
+              </div>
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
@@ -178,7 +192,9 @@
               </div>
             </div>
             <div class="recomsecond">
-              <img src="./images/content2_4-2-2.jpg" alt="">
+              <div class="img">
+                <img src="./images/content2_4-2-2.jpg" alt="">
+              </div>
               <div class="txt">
                 <div class="txt1"></div>
                 <div class="txt2"></div>
