--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1">[당근토너] 캐롯 카로틴 수딩 토너 300ml</div>
+          <div class="txt2">₩ 24,000</div>
+          <div class="txt3">₩ 15,600</div>
+          <div class="txt4">5</div>
+          <div class="txt5">점 (850)</div>
         </div>
       </li>
       <li>
@@ -228,11 +228,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -240,11 +240,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -252,11 +252,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -264,11 +264,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -276,11 +276,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -288,11 +288,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -300,11 +300,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -312,11 +312,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -324,11 +324,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -336,11 +336,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
       <li>
@@ -348,11 +348,11 @@
           <img src="./images/content3_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="text1"></div>
-          <div class="text2"></div>
-          <div class="text3"></div>
-          <div class="text4"></div>
-          <div class="text5"></div>
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
         </div>
       </li>
     </ul>
