--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     <img src="./images/쿠폰.jpg" alt="">
   </div>
   <div id="content2">
-    <span>
+    <p>
       <a href=""><strong>한 눈에 보는 추천 제품</strong></a>
-    </span>
+    </p>
     <div class="img"></div>
     <div class="recomcont">
       <ul class="drgSlide">
@@ -209,7 +209,7 @@
     <div class="abtn next"></div>
   </div>
   <div id="content3">
-    <span>요즘 뜨는 <strong>상품</strong></span>
+    <p>요즘 뜨는 <strong>상품</strong></p>
     <ul class="popcont">
       <li>
         <div class="img">
@@ -363,23 +363,195 @@
     </div>
   </div>
   <div id="content4">
-    <span>
-      <a href="">카테고리 별 인기템</a>
-    </span>
+    <p>
+      <strong><a href="">카테고리 별 인기템</a></strong>
+    </p>
     <ul class="catitem">
       <li>
-        <img src="" alt="">
-        <span></span>
+        <img src="./images/content4_cat_1.png" alt="">
+        <span>스킨케어</span>
+      </li>
+      <li>
+        <img src="./images/content4_cat_2.png" alt="">
+        <span>마스크</span>
+      </li>
+      <li>
+        <img src="./images/content4_cat_3.png" alt="">
+        <span>선</span>
+      </li>
+      <li>
+        <img src="./images/content4_cat_4.png" alt="">
+        <span>클렌징</span>
+      </li>
+      <li>
+        <img src="./images/content4_cat_5.png" alt="">
+        <span>바디</span>
+      </li>
+      <li>
+        <img src="./images/content4_cat_6.png" alt="">
+        <span>헤어</span>
+      </li>
+      <li>
+        <img src="./images/content4_cat_7.png" alt="">
+        <span>남성</span>
+      </li>
+      <li>
+        <img src="./images/content4_cat_8.png" alt="">
+        <span>베이스 메이크업</span>
+      </li>
+      <li>
+        <img src="./images/content4_cat_9.png" alt="">
+        <span>컬러 메이크업</span>
+      </li>
+      <li>
+        <img src="./images/content4_cat_10.png" alt="">
+        <span>미용 부자재</span>
       </li>
     </ul>
     <ul class="catcont">
       <li>
-        <img src="" alt="">
-        <div class="txt1"></div>
-        <div class="txt2"></div>
-        <div class="txt3"></div>
-        <div class="txt4"></div>
-        <div class="txt5"></div>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
+      </li>
+      <li>
+        <div class="img">
+          <img src="./images/content4_1-1.jpg" alt="">
+        </div>
+        <div class="txt">
+          <div class="txt1"></div>
+          <div class="txt2"></div>
+          <div class="txt3"></div>
+          <div class="txt4"></div>
+          <div class="txt5"></div>
+        </div>
       </li>
     </ul>
     <div class="abtn prev"></div>
@@ -389,9 +561,9 @@
     </div>
   </div>
   <div id="content5">
-    <span>
+    <p>
       <a href="">포토 리뷰</a>
-    </span>
+    </p>
     <div class="slidewrap">
       <ul class="slide">
         <li>
