--- a/index.html
+++ b/index.html
@@ -414,11 +414,11 @@
           <img src="./images/content4_1-1.jpg" alt="">
         </div>
         <div class="txt">
-          <div class="txt1"></div>
-          <div class="txt2"></div>
-          <div class="txt3"></div>
-          <div class="txt4"></div>
-          <div class="txt5"></div>
+          <div class="txt1">★02/23 순차출고★[당근패드]캐롯 카로틴 카밍 워터 패드 (250g, 60매)</div>
+          <div class="txt2">₩ 26,000</div>
+          <div class="txt3">₩ 16,900</div>
+          <div class="txt4">5</div>
+          <div class="txt5">점 (9,992)</div>
         </div>
       </li>
       <li>
