--- a/index.html
+++ b/index.html
@@ -416,9 +416,11 @@
         <div class="txt">
           <div class="txt1">★02/23 순차출고★[당근패드]캐롯 카로틴 카밍 워터 패드 (250g, 60매)</div>
           <div class="txt2">₩ 26,000</div>
-          <div class="txt3">₩ 16,900</div>
-          <div class="txt4">5</div>
-          <div class="txt5">점 (9,992)</div>
+          <div class="txt3">₩ 16,900
+            <div class="txt4">
+              <span class="star"></span>5<span class="rev">점 (9,992)</span>
+            </div>
+          </div>
         </div>
       </li>
       <li>
