--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                 <img src="./images/content2_1-2-1.jpg" alt="">
               </div>
               <div class="txt">
-                <div class="txt1"></div>
-                <div class="txt2"></div>
-                <div class="txt3"></div>
+                <div class="txt1">NEW 레몬 버베나 바디 워시 (450ml)</div>
+                <div class="txt2">₩ 16,000</div>
+                <div class="txt3">₩ </div>
               </div>
             </div>
             <div class="recomsecond">
@@ -114,9 +114,9 @@
                 <img src="./images/content2_1-2-2.jpg" alt="">
               </div>
               <div class="txt">
-                <div class="txt1"></div>
-                <div class="txt2"></div>
-                <div class="txt3"></div>
+                <div class="txt1">허니 리치 바디 에센스 (450ml)</div>
+                <div class="txt2">₩ </div>
+                <div class="txt3">₩ </div>
               </div>
             </div>
           </div>
@@ -131,9 +131,9 @@
                 <img src="./images/content2_2-2-1.jpg" alt="">
               </div>
               <div class="txt">
-                <div class="txt1"></div>
-                <div class="txt2"></div>
-                <div class="txt3"></div>
+                <div class="txt1">[꿀광보습]로열허니 프로폴리스 인리치 마스크(30ml)</div>
+                <div class="txt2">₩ </div>
+                <div class="txt3">₩ </div>
               </div>
             </div>
             <div class="recomsecond">
@@ -141,9 +141,9 @@
                 <img src="./images/content2_2-2-2.jpg" alt="">
               </div>
               <div class="txt">
-                <div class="txt1"></div>
-                <div class="txt2"></div>
-                <div class="txt3"></div>
+                <div class="txt1">[수분진정] 캐롯 카로틴 마스크(당근 마스크)(27ml)</div>
+                <div class="txt2">₩ </div>
+                <div class="txt3">₩ </div>
               </div>
             </div>
           </div>
@@ -158,9 +158,9 @@
                 <img src="./images/content2_3-2-1.jpg" alt="">
               </div>
               <div class="txt">
-                <div class="txt1"></div>
-                <div class="txt2"></div>
-                <div class="txt3"></div>
+                <div class="txt1">[비건/혼합자차]NEW 베리 생기 선크림 50ml SPF50+ PA++++</div>
+                <div class="txt2">₩ </div>
+                <div class="txt3">₩ </div>
               </div>
             </div>
             <div class="recomsecond">
@@ -168,9 +168,9 @@
                 <img src="./images/content2_3-2-2.jpg" alt="">
               </div>
               <div class="txt">
-                <div class="txt1"></div>
-                <div class="txt2"></div>
-                <div class="txt3"></div>
+                <div class="txt1">[비건/무기자차]NEW 베리 진정 선크림 50ml SPF50+ PA++++</div>
+                <div class="txt2">₩ </div>
+                <div class="txt3">₩ </div>
               </div>
             </div>
           </div>
@@ -185,9 +185,9 @@
                 <img src="./images/content2_4-2-1.jpg" alt="">
               </div>
               <div class="txt">
-                <div class="txt1"></div>
-                <div class="txt2"></div>
-                <div class="txt3"></div>
+                <div class="txt1">로열허니 프로폴리스 인리치 에센스 (50ml)</div>
+                <div class="txt2">₩ </div>
+                <div class="txt3">₩ </div>
               </div>
             </div>
             <div class="recomsecond">
@@ -195,17 +195,15 @@
                 <img src="./images/content2_4-2-2.jpg" alt="">
               </div>
               <div class="txt">
-                <div class="txt1"></div>
-                <div class="txt2"></div>
-                <div class="txt3"></div>
+                <div class="txt1">로열허니 프로폴리스 인리치 크림 미스트(120ml)</div>
+                <div class="txt2">₩ </div>
+                <div class="txt3">₩ </div>
               </div>
             </div>
           </div>
         </li>
       </ul>
     </div>
-    <div class="abtn prev"></div>
-    <div class="abtn next"></div>
   </div>
   <div id="content3">
     <p>요즘 뜨는 <strong>상품</strong></p>
@@ -379,8 +377,6 @@
         </div>
       </li>
     </ul>
-    <div class="abtn prev"></div>
-    <div class="abtn next"></div>
   </div>
   <div id="content4">
     <p>
@@ -576,12 +572,10 @@
         </div>
       </li> -->
     </ul>
-    <div class="abtn prev"></div>
-    <div class="abtn next"></div>
   </div>
   <div id="content5">
     <p>
-      <a href="">포토 리뷰</a>
+      <strong><a href="">포토 리뷰</a></strong>
     </p>
     <div class="slidewrap">
       <ul class="slide">
