--- a/index.html
+++ b/index.html
@@ -610,23 +610,127 @@
       </ul>
     </div>
   </div>
-  
+
   <div class="banner">
     <img src="./images/브랜드배너.png" alt="">
   </div>
 
   <div id="content6">
     <div class="instalogo">
-      <img src="" alt="">
+      <div class="img">
+        <img src="./images/content6_인스타.png" alt="">
+      </div>
     </div>
-    <div class="profile">
-      <img src="" alt="">
-      <div class="instaid"></div>
+    <div class="instagram">
+      <div class="profile">
+        <div class="profile_img">
+          <img src="./images/content6_스킨푸드프로필.jpg" alt="">
+        </div>
+        <div class="profile_use">@skinfood_official</div>
+      </div>
+      <div class="follow">
+        <a href="">Follow</a>
+      </div>
     </div>
-    <div class="photo"></div>
+    <div class="photo">
+      <div class="photoitem photoitem1">
+        <img src="./images/content6_1.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem2">
+        <img src="./images/content6_2.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem3">
+        <img src="./images/content6_3.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem4">
+        <img src="./images/content6_4.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem5">
+        <img src="./images/content6_5.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem6">
+        <img src="./images/content6_6.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem7">
+        <img src="./images/content6_7.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem8">
+        <img src="./images/content6_8.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem9">
+        <img src="./images/content6_9.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem10">
+        <img src="./images/content6_10.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem11">
+        <img src="./images/content6_11.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem12">
+        <img src="./images/content6_12.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem13">
+        <img src="./images/content6_13.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem14">
+        <img src="./images/content6_14.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem15">
+        <img src="./images/content6_15.jpg" alt="">
+      </div>
+      <div class="photoitem photoitem16">
+        <img src="./images/content6_16.jpg" alt="">
+      </div>
+    </div>
   </div>
   <footer>
-
+    <div class="txtwrap">
+      <div class="nav_wrap">
+        <ul class="nav_txt">
+          <li>공지사항</li>
+          <li>이용약관</li>
+          <li>개인정보처리방침</li>
+          <li>영상정보처리방침</li>
+          <li>매장안내</li>
+          <li>고객센터</li>
+          <button class="select_btn">Global Skinfood</button>
+          <ul class="select_list">
+            <li>US</li>
+            <li>Japan</li>
+            <li>Hong Kong</li>
+            <li>Iraq</li>
+            <li>Turkey</li>
+            <li>Vietnam</li>
+            <li>Thailand</li>
+            <li>Guatemala</li>
+            <li>Bangladesh</li>
+          </ul>
+        </ul>
+        <div class="sns_txt"></div>
+      </div>
+      <div class="copy_wrap">
+        <ul class="copy_txt">
+          <li>상호 (주)스킨푸드</li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <div class="cs_txt">
+          <div class="cs_txt1"></div>
+          <div class="cs_txt2"></div>
+          <div class="cs_txt3"></div>
+          <div class="cs_txt4"></div>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
