--- a/index.html
+++ b/index.html
@@ -705,8 +705,17 @@
             <li>Guatemala</li>
             <li>Bangladesh</li>
           </ul>
+          <button class="select_btn">Language</button>
+          <ul class="select_list">
+            <li>KOREAN</li>
+            <li>ENGLISH</li>
+          </ul>
         </ul>
-        <div class="sns_txt"></div>
+        <div class="sns_txt">
+          <div class="img"></div>
+          <div class="img"></div>
+          <div class="img"></div>
+        </div>
       </div>
       <div class="copy_wrap">
         <ul class="copy_txt">
